# hallucination-guard-env

./: .gitattributes  .openenvignore  CLAUDE.md  Dockerfile  README.md  __init__.py  client.py  evaluate_groq.py  generate_cache.py  hallucination_guard_sdk.py  inference.py  model_adapters.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_baseline.py  test_env.py  train_grpo.py
.github/workflows/: sync-to-hf.yml  test.yml
openenv/core/env_server/: __init__.py
server/: Dockerfile  __init__.py  app.py  dataset_loader.py  environment.py  grader.py  metrics.py  requirements.txt  tasks.py
server/cache/: arc_3370.json  commonsense_qa_8000.json  coqa_7199.json  fever_10000.json  halueval_5000.json  hf_cache_500.json  hotpotqa_10000.json  ms_marco_10000.json  nq_open_8000.json  openbookqa_4957.json  trivia_qa_10000.json  truthful_qa_817.json  winogrande_5000.json
tests/: __init__.py  test_adversarial.py  test_dataset_loader.py  test_endpoints.py  test_environment.py  test_grader.py
