[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hallucination-guard-env"
version = "0.1.0"
description = "RL environment for training AI to avoid hallucination"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "HallucinationGuard-Env Contributors"}
]
keywords = [
    "openenv",
    "reinforcement-learning",
    "hallucination-detection",
    "question-answering",
    "ai-safety"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/hallucination-guard/hallucination-guard-env"
Repository = "https://github.com/hallucination-guard/hallucination-guard-env"
Documentation = "https://github.com/hallucination-guard/hallucination-guard-env#readme"

[tool.hatch.build.targets.wheel]
packages = ["hallucination_guard_env"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
