[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hallucination-guard-env"
version = "4.0.0"
description = "Production RL environment for training LLMs on hallucination avoidance — 1M+ examples across 38 datasets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "HallucinationGuard-Env Contributors"}
]
keywords = [
    "openenv",
    "reinforcement-learning",
    "hallucination-detection",
    "question-answering",
    "ai-safety"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/SamSankar/hallucination-guard-env"
Repository = "https://github.com/SS-360/Openenv-halluguard"
Documentation = "https://samsankar-hallucination-guard-env.hf.space/docs"

[tool.hatch.build.targets.wheel]
packages = ["hallucination_guard_env"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
